--- a/style.css
+++ b/style.css
@@ -13,6 +13,8 @@ a {
 
 .header {
   background-color: #303546;
+  -moz-box-shadow: 0px 0px 15px;
+  -webkit-box-shadow: 0px 0px 15px;
   box-shadow: 0px 0px 15px;
   background-image: -o-linear-gradient(bottom, rgb(68,79,117) 47%, rgb(40,43,53) 100%);
   background-image: -moz-linear-gradient(bottom, rgb(68,79,117) 47%, rgb(40,43,53) 100%);
