--- a/style.css
+++ b/style.css
@@ -37,7 +37,6 @@ img {
 }
 
 .title {
-  margin: 0px 25px 0px 25px;
   font-family: Helvetica, Arial, sans-serif;
   font-size: 12pt;
   text-shadow: #333 2px 2px 4px;
@@ -45,6 +44,8 @@ img {
 }
 
 .title a {
+  padding-left: 25px;
+  padding-right: 25px;
   padding-top: 15px;
   padding-bottom: 15px;
   color: white;
@@ -70,11 +71,16 @@ img {
 .home .date {
   font-size: 11pt;
   margin-top: 0.2em;
-  margin-bottom: 1.4em;
+  margin-bottom: 1.8em;
 }
 
+/* http://colorschemedesigner.com/#3Q21TbzcYv5vM */
 .home a:link {
   color: black;
+}
+
+.home a:hover {
+  text-decoration: underline;
 }
 
 h1, h2 {
