--- a/style.css
+++ b/style.css
@@ -1,8 +1,6 @@
-
-body {
+body, blockquote {
   font-family: Georgia, serif;
-  font-size: 100%;
-  margin: 0px;
+  margin: 0;
 }
 
 a {
@@ -10,7 +8,7 @@ a {
 }
 
 img {  
-  border-style: none; /* IE */
+  border: none;
   max-width: 100%;
   height: auto;
 }
@@ -44,57 +42,51 @@ table, td, th {
   padding: 5px;
 }
 
-.body {
+h1, h2 {
+  font-family: Arial, sans-serif;
+}
+
+h1 {
+  margin: 0;
+  font-size: 1.70em;
+}
+
+h2 {
+  font-size: 1.45em;
 }
 
 .header {
   background-color: #303546;
-  -moz-box-shadow: 0px 0px 15px;
-  -webkit-box-shadow: 0px 0px 15px;
-  box-shadow: 0px 0px 15px;
-  background-image: -o-linear-gradient(bottom, rgb(68,79,117) 47%, rgb(40,43,53) 100%);
-  background-image: -moz-linear-gradient(bottom, rgb(68,79,117) 47%, rgb(40,43,53) 100%);
-  background-image: -webkit-linear-gradient(bottom, rgb(68,79,117) 47%, rgb(40,43,53) 100%);
-  background-image: -ms-linear-gradient(bottom, rgb(68,79,117) 47%, rgb(40,43,53) 100%);
-  background-image: linear-gradient(bottom, rgb(68,79,117) 47%, rgb(40,43,53) 100%);
-
-  background-image: -webkit-gradient(
-  linear,
-  left bottom,
-  left top,
-  color-stop(0.47, rgb(68,79,117)),
-  color-stop(1, rgb(40,43,53))
-  );
+  box-shadow: 0px 0px 15px rgba(0, 0, 0, 1);
+  background-image: linear-gradient(to top, rgb(68, 79, 117) 47%, rgb(40, 43, 53) 100%);
 }
 
 .title {
   font-family: Helvetica, Arial, sans-serif;
   font-size: 1em;
-  text-shadow: #333 2px 2px 4px;
+  text-shadow: 2px 2px 4px #333;
   color: white;
 }
 
 .title a {
-  padding-left: 25px;
-  padding-right: 25px;
-  padding-top: 15px;
-  padding-bottom: 15px;
+  padding: 15px 25px;
   color: white;
   display: block;
 }
 
 .blog, .home {
-  margin: 25px 25px 25px 25px;
+  margin: 25px;
   max-width: 50em;
 }
 
-.blog .date {
+.blog .date, .home .date {
   margin-top: 0.25em;
+  font-size: 0.9em;
+  margin-bottom: 1.8em;
 }
 
 .blog .entry {
-  margin-left: 0;
-  margin-right: 0;
+  margin: 0;
   margin-top: 1em;
 }
 
@@ -102,13 +94,6 @@ table, td, th {
   margin-top: 2em;
 }
 
-.home .date {
-  font-size: 0.9em;
-  margin-top: 0.2em;
-  margin-bottom: 1.8em;
-}
-
-/* http://colorschemedesigner.com/#3Q21TbzcYv5vM */
 .home a:link {
   color: black;
 }
@@ -117,21 +102,7 @@ table, td, th {
   text-decoration: underline;
 }
 
-h1, h2 {
-  font-family: Arial, sans-serif;
-}
-
-h1 {
-  margin: 0px;
-  font-size: 1.70em;
-}
-
-h2 {
-  font-size: 1.45em;
-}
-
 .home h2 {
-  margin: 0px;
+  margin: 0;
   font-size: 1.35em;
 }
-
