--- a/style.css
+++ b/style.css
@@ -12,9 +12,8 @@ p { hyphens: auto; }
 
 a {
   text-decoration: none;
+  word-break: break-all;
 }
-
-a.url { word-break: break-all; }
 
 a:hover, a:active {
   color: #eb4471; /* same as header */
