--- a/style.css
+++ b/style.css
@@ -12,7 +12,10 @@ p { hyphens: auto; }
 
 a {
   text-decoration: none;
-  word-break: break-all;
+}
+
+a.url {
+  word-break: break-all !important;
 }
 
 a:hover, a:active {
