--- a/style.css
+++ b/style.css
@@ -43,17 +43,20 @@ a {
     color: white;
 
     a {
-      padding: var(--space-sm) var(--space-md);
-      color: white;
       display: block;
+      padding-block: var(--space-sm);
+      padding-inline: max(var(--space-md), calc((100% - var(--max-content-width)) / 2));
+      color: white;
     }
   }
 }
 
 /* shared styling for blog entries and index.html */
 .blog, .home {
-  margin: var(--space-md);
-  max-width: var(--max-content-width);
+  max-width: calc(var(--max-content-width) + 2 * var(--space-md));
+  margin: var(--space-md) auto;
+  padding-inline: var(--space-md);
+  box-sizing: border-box;
 
   .date {
     margin-top: 0.25rem;
