--- a/style.css
+++ b/style.css
@@ -1,10 +1,10 @@
 :root {
   /* colors - light mode */
-  --color-primary: #9d4edd;
+  --color-primary: #b874ff;
   --color-bg: #eaeef4;
   --color-text: #282c34;
   --color-link: #0969da;
-  --color-link-visited: #8250df;
+  --color-link-visited: #7b5fb8;
   --color-code-bg: #f5f7fa;
   --color-code-border: #d0d5dd;
   --color-border: #3e4451;
@@ -27,10 +27,10 @@
 @media (prefers-color-scheme: dark) {
   :root:not(:has(#theme-toggle:checked)) {
     --color-primary: #c678dd;
-    --color-bg: #282c34;
+    --color-bg: #1e2227;
     --color-text: #bbc2cf;
-    --color-link: #58a6ff;
-    --color-link-visited: #a371f7;
+    --color-link: #d4a5f5;
+    --color-link-visited: #9b8bad;
     --color-code-bg: #21252b;
     --color-code-border: #3e4451;
     --color-border: #3e4451;
@@ -41,10 +41,10 @@
 @media (prefers-color-scheme: light) {
   :root:has(#theme-toggle:checked) {
     --color-primary: #c678dd;
-    --color-bg: #282c34;
+    --color-bg: #1e2227;
     --color-text: #bbc2cf;
-    --color-link: #58a6ff;
-    --color-link-visited: #a371f7;
+    --color-link: #d4a5f5;
+    --color-link-visited: #9b8bad;
     --color-code-bg: #21252b;
     --color-code-border: #3e4451;
     --color-border: #3e4451;
@@ -76,6 +76,21 @@ a {
   &:hover,
   &:active {
     color: var(--color-primary);
+  }
+}
+
+/* dark mode: brighter hover color for links */
+@media (prefers-color-scheme: dark) {
+  :root:not(:has(#theme-toggle:checked)) a:hover,
+  :root:not(:has(#theme-toggle:checked)) a:active {
+    color: #e8c9ff;
+  }
+}
+
+@media (prefers-color-scheme: light) {
+  :root:has(#theme-toggle:checked) a:hover,
+  :root:has(#theme-toggle:checked) a:active {
+    color: #e8c9ff;
   }
 }
 
